Fix bug with aligning digits inside  options on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -294,13 +294,16 @@ body {
 }
 
 .option {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
   width: 40px;
   height: 40px;
-  border: 1px solid var(--black);
   border-radius: 50%;
+  border: 1px solid var(--black);
   font-size: 18px;
-  font-weight: bold;
   text-align: center;
+  font-weight: bold;
   line-height: 40px;
   cursor: pointer;
   background-color: var(--white);
